fix: #51 flickering effect

--- a/src/style/_mixins_anntaton_color.scss
+++ b/src/style/_mixins_anntaton_color.scss
@@ -1,3 +1,5 @@
+@use "sass:list";
+
 $annotation-bg-color: rgba(red, 0.3);
 $annotation-border-color: rgba(red, 0.3);
 $annotation-bg-color--active: rgba(red, 0.3);
@@ -14,25 +16,25 @@ $annotation-border-color--active: rgba(red, 0.9);
   $border-color: var(--annotation-border-color, $annotation-border-color);
   $border: 2px solid $border-color;
 
-  @if index($borders, "top") {
+  @if list.index($borders, "top") {
     border-top: $border;
   } @else {
     border-top-style: none;
   }
 
-  @if index($borders, "bottom") {
+  @if list.index($borders, "bottom") {
     border-bottom: $border;
   } @else {
     border-bottom-style: none;
   }
 
-  @if index($borders, "left") {
+  @if list.index($borders, "left") {
     border-left: $border;
   } @else {
     border-left-style: none;
   }
 
-  @if index($borders, "right") {
+  @if list.index($borders, "right") {
     border-right: $border;
   } @else {
     border-right-style: none;
